--- a/2/2.md
+++ b/2/2.md
@@ -1,6 +1,6 @@
 # 目录
 
-[1、面向对象高级（一）](./day01-面向对象高级\day01-面向对象高级.md)
+[1、面向对象高级（一）](./day01-面向对象高级/day01-面向对象高级.md)
 
 [2、面向对象高级（二）](./day02-面向对象高级\day02——面向对象高级.md)
 
