--- a/2/2.md
+++ b/2/2.md
@@ -2,11 +2,11 @@
 
 [1、面向对象高级（一）](./day01-面向对象高级/day01-面向对象高级.md)
 
-[2、面向对象高级（二）](./day02-面向对象高级\day02——面向对象高级.md)
+[2、面向对象高级（二）](./day02-面向对象高级/day02——面向对象高级.md)
 
-[3、面向对象高级（三）](./day03-面向对象高级\day03——面向对象高级.md)
+[3、面向对象高级（三）](./day03-面向对象高级/day03——面向对象高级.md)
 
-[4、常用API&日期类](.\day04-常用API&日期类\day04-常用API.md)
+[4、常用API&日期类](./day04-常用API&日期类/day04-常用API.md)
 
 [5、lambda表达式、方法引用、算法、正则表达式](./day05-lambda表达式、方法引用、算法、正则表达式/day05-Lambda、方法引用、算法、正则表达式.md)
 
